Fixed padding and gap in language section

--- a/style.css
+++ b/style.css
@@ -806,18 +806,18 @@ textarea::placeholder {
   .container-desktop {
     display: flex;
     flex-direction: row;
-    gap: 3px;
+    gap: 10px;
   }
 
   .languages {
-    padding: 0;
-    margin: 0;
+    padding: 10px;
+    margin: 0;  
     display: flex;
     flex-direction: column;
     text-align: center;
     background-color: rgba(247, 247, 249, 1);
-    width: 8rem;
-    height: 8rem;
+    width: 7rem;
+    height: 7rem;
   }
 
   .languages-img {
